--- a/training/fine-tune-gemma-with-trl-qlora.ipynb
+++ b/training/fine-tune-gemma-with-trl-qlora.ipynb
@@ -85,7 +85,7 @@
     "\n",
     "Before we can start training we have to make sure that we accepted the termos of Model to be able to use it. You can accept the license on Hugging Face by clicking on the Agree and access repository button on the model page at:\n",
     "\n",
-    "After you have accepted the license you need a valid Hugging Face Token to access the model. If you are running inside a Google Colab we can securely use our Hugging Face Token using the Colab secrets otherwise you can set the token as environment variable by running `os.environ[\"HF_TOKEN\"] = \"YOUR_TOKEN\"`\n",
+    "After you have accepted the license you need a valid Hugging Face Token to access the model. If you are running inside a Google Colab we can securely use our Hugging Face Token using the Colab secrets otherwise you can set the token as directly in the `login` method. \n",
     "\n",
     "Make sure your token has write access too, as you will push your model to the hub during training."
    ]
@@ -96,11 +96,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os \n",
     "from google.colab import userdata\n",
+    "from huggingface_hub import login\n",
     "\n",
-    "# Set the token as environment variable\n",
-    "os.environ[\"HF_TOKEN\"] = userdata.get('HF_TOKEN',\"OR_ADD_YOUR_TOKEN_HERE\")"
+    "# Login into Hugging Face Hub\n",
+    "login(userdata.get('HF_TOKEN')) # Replace with your own token"
    ]
   },
   {
@@ -189,11 +189,8 @@
     "# split dataset into 10,000 training samples and 2,500 test samples\n",
     "dataset = dataset.train_test_split(test_size=2500/12500)\n",
     "\n",
-    "print(dataset[\"train\"][345][\"messages\"])\n",
-    "\n",
-    "# save datasets to disk \n",
-    "dataset[\"train\"].to_json(\"train_dataset.json\", orient=\"records\")\n",
-    "dataset[\"test\"].to_json(\"test_dataset.json\", orient=\"records\")"
+    "# Print formatted user prompt\n",
+    "print(dataset[\"train\"][345][\"messages\"][1][\"content\"])"
    ]
   },
   {
@@ -210,26 +207,7 @@
     "* PEFT (parameter-efficient fine-tuning) support including Q-LoRA\n",
     "* Preparing the model and tokenizer for conversational fine-tuning (e.g. adding special tokens)\n",
     "\n",
-    "First, load the prepared dataset from disk. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets import load_dataset\n",
-    "\n",
-    "# Load jsonl data from disk\n",
-    "dataset = load_dataset(\"json\", data_files=\"train_dataset.json\", split=\"train\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This example uses Llama 3.1 8B, you can swap it out for another version by changing the `model_id` variable. We will use bitsandbytes to quantize our model to 4-bit.\n",
+    "This example uses Gemma, you can swap it out for another version by changing the `model_id` variable. We will use bitsandbytes to quantize our model to 4-bit.\n",
     "\n",
     "_Note: Be aware the bigger the model the more memory it will require. In our example we will use the 8B version, which can be tuned on 24GB GPUs. If you have a smaller GPU._"
    ]
@@ -242,10 +220,9 @@
    "source": [
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
-    "from trl import setup_chat_format\n",
     "\n",
     "# Hugging Face model id\n",
-    "model_id = \"meta-llama/Meta-Llama-3.1-8B\" # or `mistralai/Mistral-7B-v0.1`\n",
+    "model_id = \"google/gemma-2-2b-it\" # or `mistralai/Mistral-7B-v0.1`\n",
     "\n",
     "\n",
     "# Check if GPU benefits from bfloat16\n",
@@ -320,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import SFTConfig\n",
+    "from trl import SFTConfig\n",
     "\n",
     "args = SFTConfig(\n",
     "    output_dir=\"code-llama-3-1-8b-text-to-sql\", # directory to save and repository id\n",
@@ -341,6 +318,10 @@
     "    lr_scheduler_type=\"constant\",           # use constant learning rate scheduler\n",
     "    push_to_hub=True,                       # push model to hub\n",
     "    report_to=\"tensorboard\",                # report metrics to tensorboard\n",
+    "    dataset_kwargs={\n",
+    "        \"add_special_tokens\": False,  # We template with special tokens\n",
+    "        \"append_concat_token\": False, # No need to add additional separator token\n",
+    "    }\n",
     ")"
    ]
   },
@@ -348,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now have every building block we need to create our `SFTTrainer` to start then training our model."
+    "You now have every building block you need to create your `SFTTrainer` to start then training your model."
    ]
   },
   {
@@ -363,13 +344,9 @@
     "trainer = SFTTrainer(\n",
     "    model=model,\n",
     "    args=args,\n",
-    "    train_dataset=dataset,\n",
+    "    train_dataset=dataset[\"train\"],\n",
     "    peft_config=peft_config,\n",
-    "    tokenizer=tokenizer,\n",
-    "    dataset_kwargs={\n",
-    "        \"add_special_tokens\": False,  # We template with special tokens\n",
-    "        \"append_concat_token\": False, # No need to add additional separator token\n",
-    "    }\n",
+    "    processing_class=tokenizer\n",
     ")"
    ]
   },
@@ -398,31 +375,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Merge LoRA adapter in to the original model\n",
-    "\n",
     "When using QLoRA, you only train adapters and not the full model. This means when saving the model during training you only save the adapter weights and not the full model. If you want to save the full model, which makes it easier to use with serving Stacks like vLLM or TGI you can merge the adapter weights into the model weights using the `merge_and_unload` method and then save the model with the `save_pretrained` method. This will save a default model, which can be used for inference.\n",
     "\n",
-    "_Note: This requires > 30GB CPU Memory._"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#### COMMENT IN TO MERGE PEFT AND BASE MODEL ####\n",
-    "# from peft import AutoPeftModelForCausalLM\n",
+    "_Note: This requires > 30GB CPU Memory._\n",
     "\n",
-    "# # Load PEFT model on CPU\n",
-    "# model = AutoPeftModelForCausalLM.from_pretrained(\n",
-    "#     args.output_dir,\n",
-    "#     torch_dtype=torch.float16,\n",
-    "#     low_cpu_mem_usage=True,\n",
-    "# )  \n",
-    "# # Merge LoRA and base model and save\n",
-    "# merged_model = model.merge_and_unload()\n",
-    "# merged_model.save_pretrained(args.output_dir,safe_serialization=True, max_shard_size=\"2GB\")"
+    "```python\n",
+    "from peft import AutoPeftModelForCausalLM\n",
+    "\n",
+    "# Load PEFT model on CPU\n",
+    "model = AutoPeftModelForCausalLM.from_pretrained(\n",
+    "    args.output_dir,\n",
+    "    torch_dtype=torch.float16,\n",
+    "    low_cpu_mem_usage=True,\n",
+    ")  \n",
+    "# Merge LoRA and base model and save\n",
+    "merged_model = model.merge_and_unload()\n",
+    "merged_model.save_pretrained(args.output_dir, safe_serialization=True, max_shard_size=\"2GB\")\n",
+    "```"
    ]
   },
   {
@@ -464,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's load the test dataset and try to generate an instruction."
+    "Let's load a random sample from the test and generate a SQL command."
    ]
   },
   {
@@ -473,21 +442,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset \n",
     "from random import randint\n",
     "import re\n",
     "\n",
     "# Load our test dataset\n",
-    "eval_dataset = load_dataset(\"json\", data_files=\"test_dataset.json\", split=\"train\")\n",
-    "rand_idx = randint(0, len(eval_dataset))\n",
+    "rand_idx = randint(0, len(dataset[\"test\"]))\n",
     "\n",
     "# Test on sample \n",
-    "prompt = pipe.tokenizer.apply_chat_template(eval_dataset[rand_idx][\"messages\"][:2], tokenize=False, add_generation_prompt=True)\n",
+    "prompt = pipe.tokenizer.apply_chat_template(dataset[\"test\"][rand_idx][\"messages\"][:2], tokenize=False, add_generation_prompt=True)\n",
     "outputs = pipe(prompt, max_new_tokens=256, do_sample=False, temperature=0.1, top_k=50, top_p=0.1, eos_token_id=pipe.tokenizer.eos_token_id, pad_token_id=pipe.tokenizer.pad_token_id)\n",
     "\n",
     "# Extract the user query and original answer\n",
-    "print(f\"Query:\\n{re.search(r'<USER_QUERY>(.*?)</USER_QUERY>', eval_dataset[rand_idx]['messages'][1]['content']).group(1)}\")\n",
-    "print(f\"Original Answer:\\n{eval_dataset[rand_idx]['messages'][2]['content']}\")\n",
+    "print(f\"Query:\\n{re.search(r'<USER_QUERY>(.*?)</USER_QUERY>', dataset[\"test\"][rand_idx]['messages'][1]['content']).group(1)}\")\n",
+    "print(f\"Original Answer:\\n{dataset[\"test\"][rand_idx]['messages'][2]['content']}\")\n",
     "print(f\"Generated Answer:\\n{outputs[0]['generated_text'][len(prompt):].strip()}\")"
    ]
   },
